chore: add and refactor test